# mypostbank-ui/src/app/services/services/authentication-controller.service.ts
@@ -38,7 +38,8 @@ export class AuthenticationControllerService extends BaseService {
    *
    * This method sends `application/json` and handles request body of type `application/json`.
    */
-  register$Response(params: Register$Params, context?: HttpContext): Observable<StrictHttpResponse<AuthenticationResponse>> {
+  register$Response(params: Register$Params, context?: HttpContext): Observable<StrictHttpResponse<{
+}>> {
     return register(this.http, this.rootUrl, params, context);
   }
 
@@ -52,9 +53,12 @@ export class AuthenticationControllerService extends BaseService {
    *
    * This method sends `application/json` and handles request body of type `application/json`.
    */
-  register(params: Register$Params, context?: HttpContext): Observable<AuthenticationResponse> {
+  register(params: Register$Params, context?: HttpContext): Observable<{
+}> {
     return this.register$Response(params, context).pipe(
-      map((r: StrictHttpResponse<AuthenticationResponse>): AuthenticationResponse => r.body)
+      map((r: StrictHttpResponse<{
+}>): {
+} => r.body)
     );
   }
 
